modified re_1re key to slot added re mem check added threshold check function added per model mem threshold added model info in json output when auditing device

--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -9,3 +9,8 @@
   test: "string_equal"
   val: "Up"
   tfield: "state"
+- desc: "Routing Engine memory buffer below threshold"
+  cmd: "re_1re"
+  test: "threshold"
+  fail: "high"
+  tfield: "mem"
