--- a/configuration/models.yml
+++ b/configuration/models.yml
@@ -1,10 +1,15 @@
 mx104:
     zzz: 30
+    mem_thr: 3
 mx960:
     zzz: 5
+    mem_thr: 3
 mx480:
     zzz: 10
+    mem_thr: 3
 mx10008:
     zzz: 1
+    mem_thr: 50
 mx204:
     zzz: 2
+    mem_thr: 12
