global thresholds file updated thresold test to take into account global thresholds new ospf interfaces command

--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -14,3 +14,8 @@
   test: "threshold"
   fail: "high"
   tfield: "mem"
+- desc: "OSPF interfaces have at least one neighbor"
+  cmd: "ospf_iface"
+  test: "threshold"
+  fail: "low"
+  tfield: "ncount"
