--- a/configuration/commands.yml
+++ b/configuration/commands.yml
@@ -34,3 +34,7 @@
   display_name: "show bfd sessions"
   supp_plat: ["sh", "cgn", "opm", "pe"]
   2re: all
+- name: "system_storage"
+  display_name: "show system storage"
+  supp_plat: ["sh", "cgn", "opm", "pe"]
+  2re: all
