--- a/configuration/commands.yml
+++ b/configuration/commands.yml
@@ -38,3 +38,7 @@
   display_name: "show system memory"
   supp_plat: ["sh", "cgn", "opm", "pe"]
   2re: all
+- name: "chassis_alarm"
+  display_name: "show chassis alarms"
+  supp_plat: ["sh", "cgn", "opm", "pe"]
+  2re: all
