audit: release info into res_dict['id_card'] test new realese info location with ditribution test

--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -40,3 +40,7 @@
   fail: "lower"
   tfield: "usedperc"
   interest: ['/dev/gpt/junos']
+- desc: "Release distribution"
+  cmd: "id_card"
+  test: "distribution"
+  dfield: "release"
