restored release location in audit json output added global_distribution test

--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -21,7 +21,7 @@
   tfield: "ncount"
 - desc: "BGP states distribution"
   cmd: "bgp_summary"
-  test: "distribution"
+  test: "device_distribution"
   dfield: "state"
 - desc: "Number of Bfd Sessions"
   cmd: "bfd_session"
@@ -42,5 +42,9 @@
   interest: ['/dev/gpt/junos']
 - desc: "Release distribution"
   cmd: "id_card"
-  test: "distribution"
+  test: "global_distribution"
   dfield: "release"
+- desc: "BGP global states distribution"
+  cmd: "bgp_summary"
+  test: "global_distribution"
+  dfield: "state"
