check file validation completed changed thresholds organization

--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -22,14 +22,14 @@
 - desc: "BGP states distribution"
   cmd: "bgp_summary"
   test: "device_distribution"
-  dfield: "state"
+  tfield: "state"
 - desc: "Number of Bfd Sessions"
   cmd: "bfd_session"
   test: "total"
 - desc: "Basic stats for Active system memory"
   cmd: "system_memory"
   test: "basic_stats"
-  sfield: "act"
+  tfield: "act"
   unit: "%"
 - desc: "Chassis alarms existence"
   cmd: "chassis_alarm"
@@ -46,4 +46,4 @@
 - desc: "BGP global states distribution"
   cmd: "bgp_summary"
   test: "global_distribution"
-  dfield: "state"
+  tfield: "state"
