facts added as dev json key to make tests on release etc... compliant to test functions

--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -41,8 +41,9 @@
   tfield: "usedperc"
   interest: ['/dev/gpt/junos']
 - desc: "Release distribution"
-  cmd: "release"
+  cmd: "facts"
   test: "global_distribution"
+  tfield: "release"
 - desc: "BGP global states distribution"
   cmd: "bgp_summary"
   test: "global_distribution"
