--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -12,12 +12,12 @@
 - desc: "Routing Engine memory buffer below threshold"
   cmd: "re_1re"
   test: "threshold"
-  fail: "high"
+  fail: "higher"
   tfield: "mem"
 - desc: "OSPF interfaces have at least one neighbor"
   cmd: "ospf_iface"
   test: "threshold"
-  fail: "low"
+  fail: "lower"
   tfield: "ncount"
 - desc: "BGP states distribution"
   cmd: "bgp_summary"
