--- a/configuration/nonstd_commands.yml
+++ b/configuration/nonstd_commands.yml
@@ -1,5 +1,6 @@
 - cmd: 'fabric_reachability'
   rpc: 'get-fm-fabric-reachability-information'
+  args: 'detail=True'
   display_name: 'show chassis fabric reachability'
   supp_plat: ['opm']
   function: 'nonstd_single_node'
