--- a/configuration/nonstd_commands.yml
+++ b/configuration/nonstd_commands.yml
@@ -1,9 +1,9 @@
 - cmd: 'fabric_reachability'
+  display_name: 'show chassis fabric reachability'
   rpc: 'get-fm-fabric-reachability-information'
   args: 'detail=True'
-  display_name: 'show chassis fabric reachability'
   supp_plat: ['opm']
   function: 'nonstd_single_node'
-  xmlfield: 'fab-reach-status'
-  varname: 'status'
+  map:
+    status : fab-reach-status
   2re: 'all'
