--- a/configuration/nonstd_commands.yml
+++ b/configuration/nonstd_commands.yml
@@ -7,3 +7,12 @@
   map:
     status : fab-reach-status
   2re: 'all'
+- cmd: 'system_uptime'
+  display_name: 'show system uptie'
+  rpc: 'get-system-uptime-information'
+  supp_plat: ['opm']
+  function: 'nonstd_single_node'
+  map:
+    booted : system-booted-time\time-length
+    configured: last-configured-time\time-length
+  2re: 'all'
