--- a/configuration/nonstd_commands.yml
+++ b/configuration/nonstd_commands.yml
@@ -13,6 +13,6 @@
   supp_plat: ['opm']
   function: 'nonstd_single_node'
   map:
-    booted : system-booted-time\time-length
-    configured: last-configured-time\time-length
+    booted : system-booted-time/time-length
+    configured: last-configured-time/time-length
   2re: 'all'
