--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -48,3 +48,12 @@
   cmd: "bgp_summary"
   test: "global_distribution"
   tfield: "state"
+- desc: "FPC temperature"
+  cmd: "chassis_fpc"
+  test: "threshold"
+  fail: "higher"
+  tfield: "temp"
+- desc: "FPC states distribution"
+  cmd: "chassis_fpc"
+  test: "device_distribution"
+  tfield: "state"
