--- a/configuration/commands.yml
+++ b/configuration/commands.yml
@@ -54,3 +54,7 @@
   display_name: "show system core-dump"
   supp_plat: ["sh", "cgn", "opm", "pe"]
   2re: all
+- name: "routing_instances"
+  display_name: "show configuration routing-instances"
+  supp_plat: ["sh", "cgn", "opm", "pe"]
+  2re: all
