added RE model check

--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -65,3 +65,13 @@
 - desc: "Core dumps existence"
   cmd: "core_dump"
   test: "empty"
+- desc : "RE model correct"
+  cmd: "re_1re"
+  test: "string_equal"
+  val: "RE-VMX"
+  tfield: "model"
+- desc : "2RE model correct"
+  cmd: "re_2re"
+  test: "string_equal"
+  val: "RE-VMX"
+  tfield: "model"
