system_licenses command and check

--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -75,3 +75,8 @@
   test: "string_equal"
   val: "RE-VMX"
   tfield: "model"
+- desc : "permanent licenses"
+  cmd: "system_licenses"
+  test: "string_equal"
+  val: "permanent"
+  tfield: "valid"
