--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -85,3 +85,18 @@
   test: "threshold"
   fail: "higher"
   tfield: "ifl_down"
+- desc: "non-recovery snapshots"
+  cmd: "system_snapshot"
+  test: "threshold"
+  fail: "lower"
+  tfield: "nonrectot"
+- desc: "recovery snapshots"
+  cmd: "system_snapshot"
+  test: "threshold"
+  fail: "lower"
+  tfield: "rectot"
+- desc: "snapshot versions"
+  cmd: "system_snapshot"
+  test: "string-equal"
+  val: "19.4R2"
+  tfield: "nonrectot"
