good_values test routing instances tv fixed check for good values test

--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -98,9 +98,24 @@
 - desc: "snapshot versions"
   cmd: "system_snapshot"
   test: "string_equal"
-  val: "18.4R1.8"
+  val: "18.4R1"
   tfield: "versions"
 - desc : "All BGP flap count equal"
   cmd: "bgp_summary"
   test: "all_equal_device"
   tfield: "flap"
+- desc : "Licenses status"
+  cmd: "system_licenses"
+  test: "good_values"
+  val: "valid"
+  tfield: ['permanent', 'valid']
+- desc : "Snapshots list test good_values OK"
+  cmd: "system_snapshot"
+  test: "good_values"
+  val: ['18.4R1.8', '19.4']
+  tfield: "versions"
+- desc : "Snapshots list test good_values KO"
+  cmd: "system_snapshot"
+  test: "good_values"
+  val: ['18.4R1', '19.4']
+  tfield: "versions""
