--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -2,7 +2,7 @@
 - desc : "OSPF states not Full"
   cmd: "ospf_neigh"
   test: "string_equal"
-  val: "XXX"
+  val: "Full"
   tfield: "state"
 - desc : "MPLS interfaces not UP"
   cmd: "mpls_iface"
@@ -17,7 +17,7 @@
 - desc: "OSPF interfaces have at least one neighbor"
   cmd: "ospf_iface"
   test: "threshold"
-  fail: "lower"
+  fail: "higher"
   tfield: "ncount"
 - desc: "BGP states distribution"
   cmd: "bgp_summary"
@@ -98,16 +98,16 @@
 - desc: "snapshot versions"
   cmd: "system_snapshot"
   test: "string_equal"
-  val: "18.4R1"
+  val: "18.4R1.8"
   tfield: "versions"
 - desc : "All BGP flap count equal"
   cmd: "bgp_summary"
   test: "all_equal_device"
   tfield: "flap"
-- desc : "Licenses status"
+- desc : "Licenses status good values"
   cmd: "system_licenses"
   test: "good_values"
-  val: ['permanentX', 'valid']
+  val: ['permanent', 'valid']
   tfield: "valid"
 - desc : "Snapshots list test good_values OK"
   cmd: "system_snapshot"
