device distribution mising tfield cornercase

--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -129,3 +129,7 @@
   test: "threshold"
   fail: "higher"
   tfield: "ldp_act"
+- desc: "route summary device distribution finds missing tfield"
+  cmd: "route_summary"
+  test: "device_distribution"
+  tfield: "ldp_act"
