basic_stats missing tfield cornercase

--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -138,3 +138,11 @@
   test: "total_filtered"
   tfield: "ldp_act"
   val: "4"
+- desc: "route summary basic stats finds missing tfield"
+  cmd: "route_summary"
+  test: "basic_stats"
+  tfield: "ldp_act"
+- desc: "route summary basic stats finds missing tfield KO"
+  cmd: "route_summary"
+  test: "basic_stats"
+  tfield: "ldp_act2"
