--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -142,7 +142,9 @@
   cmd: "route_summary"
   test: "basic_stats"
   tfield: "ldp_act"
+  unit: ""
 - desc: "route summary basic stats finds missing tfield KO"
   cmd: "route_summary"
   test: "basic_stats"
   tfield: "ldp_act2"
+  unit: ""
