confchecks to test different scenarios

--- a/configuration/confchecks.yml
+++ b/configuration/confchecks.yml
@@ -3,3 +3,10 @@
 - desc: "OSPF interface-type p2p where configured"
   path: "protocols/ospf/area/interface/interface-type"
   eq: "p2p"
+- desc: "FTP enabled"
+  path: "system/services/ftp"
+- desc: "Wrong check. Node with no text"
+  path: "interfaces/interface"
+  eq: "aaa"
+- desc: "Filter configured with name ok"
+  path: "interfaces/interface/family/inet/filter/input/filter-name"
