--- a/configuration/confchecks.yml
+++ b/configuration/confchecks.yml
@@ -11,3 +11,6 @@
 - desc: "Filter configured with name ok"
   path: "interfaces/interface/unit/family/inet/filter/input/filter-name"
   eq: "ok"
+- desc: "Expected number of BGP neighbors"
+  path: "protocols/bgp/group/neighbor/name"
+  tot: 3
