confcheck failid test

--- a/configuration/confchecks.yml
+++ b/configuration/confchecks.yml
@@ -14,3 +14,11 @@
 - desc: "Expected number of BGP neighbors"
   path: "protocols/bgp/group/neighbor/name"
   tot: 3
+- desc: "Filter configured with name ok"
+  path: "interfaces/interface/unit"
+  failid:
+    - name
+    - ../name
+  inspect:
+    - node: "filter-name"
+    - value: "ok"
