--- a/configuration/jplots.yml
+++ b/configuration/jplots.yml
@@ -1,5 +1,5 @@
 - desc: "RE0 memory"
   img_name: "re0_mem"
   devices: ['MX1_TORINO']
-  data: "re1_re->0->mem"
+  data: "re_1re->0->mem"
   test: "simple_line_specific"
