--- a/configuration/jplots.yml
+++ b/configuration/jplots.yml
@@ -4,3 +4,9 @@
   data: "re_1re->0->mem"
   test: "simple_line_specific"
   ylabel: "RE memory %"
+- desc: "system storage use"
+  img_name: "sys_stor_use"
+  devices: ['MX1_TORINO']
+  data: "system_storage->used_perc"
+  test: "simple_line_multi"
+  ylabel: "used %"
