ignore field in string_equal list use-case only test with system snapshot

--- a/configuration/checks.yml
+++ b/configuration/checks.yml
@@ -2,7 +2,7 @@
 - desc : "OSPF states not Full"
   cmd: "ospf_neigh"
   test: "string_equal"
-  val: "Full2"
+  val: "Full"
   tfield: "state"
 - desc : "MPLS interfaces not UP"
   cmd: "mpls_iface"
@@ -152,3 +152,15 @@
   cmd: "route_summary"
   test: "global_distribution"
   tfield: "ldp_act"
+- desc: "IGNORE, string_equal, val nok, ignore exists, should pass, snapshot versions"
+  cmd: "system_snapshot"
+  test: "string_equal"
+  val: "18.3"
+  ignore: ['18.4R1.8']
+  tfield: "versions"
+- desc: "IGNORE, string_equal, val nok, ignore nok, should fail, snapshot versions"
+  cmd: "system_snapshot"
+  test: "string_equal"
+  val: "18.3"
+  ignore: ['18.4R1']
+  tfield: "versions"
