--- a/configuration/jplots.yml
+++ b/configuration/jplots.yml
@@ -10,3 +10,8 @@
   data: "system_storage->usedperc"
   test: "simple_line_multi"
   ylabel: "used %"
+- desc: "pfe traffic statistics output-pps"
+  img_name: "pfe_traffic_stats_outpps"
+  data: "pfe_trfstats->opps"
+  test: "compare_devices_specific"
+  ylabel: "PPS"
